--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -54,6 +54,25 @@
         .navbar-dark {
             background-color: #512DA8;
         }
+
+        .carousel {
+            background:#512DA8;
+        }
+
+        .carousel-item {
+        height: 300px;
+        }
+
+        .carousel-item img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-height: 300px;
+        }
+        .carousel-caption {
+            bottom: 10%;
+            left: 30%;
+        }
     </style>
 
     <title>Ristorante Con Fusion</title>
@@ -143,55 +162,58 @@
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3 class="font-weight-bold">Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col-12 col-sm order-sm-first col-md">
-                <div class="media">
-                    <img alt="uthappizza" src="./img/uthappizza.png" class="d-flex mr-3 img-thumbnail align-self-center">
-                    <div class="media-body">
-                        <h2 class="mt-0 font-weight-bold">Uthappizza <span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary ml-2">$4.99</span></h2>
-                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+        <div class="row row-content row-content align-items-center">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid"
+                                src="img/uthappizza.png" alt="Uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, 
+                                    ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid"
+                                src="./img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="font-weight-bold">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five 
+                                    different salads, six enticing appetizers, six main entrees and
+                                    five choicest desserts. Free flowing bubbly and soft drinks. All for 
+                                    just $19.99 per person
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid"
+                                alt="alberto" src="./img/alberto.png">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="font-weight-bold">Alberto Somayya</h2>
+                                <h4 class="font-weight-bold">Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having
+                                    worked closely with whos-who in the culinary world, he specializes in creating mouthwatering 
+                                    Indo-Italian fusion experiences. 
+                                </p>
+                            </div>
+                        </div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mycarousel" data-slide-to="1"></li>
+                            <li data-target="#mycarousel" data-slide-to="2"></li>
+                        </ol>
                     </div>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
                 </div>
-            </div>
-        </div>
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3 class="font-weight-bold">This Month's Promotions</h3>
-            </div>
-            <div class="col col-sm col-md">
-                <div class="media">
-                    <div class="media-body">
-                        <h2 class="font-weight-bold">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five 
-                            different salads, six enticing appetizers, six main entrees and
-                            five choicest desserts. Free flowing bubbly and soft drinks. All for 
-                            just $19.99 per person
-                        </p>
-                    </div>
-                    <img alt="buffet" src="./img/buffet.png" class="d-flex mr-3 img-thumbnail align-self-center">
-                </div>
-            </div>
-        </div>
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3 class="font-weight-bold">Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img alt="alberto" src="./img/alberto.png" class="d-flex mr-3 img-thumbnail align-self-center">
-                    <div class="media-body">
-                        <h2 class="font-weight-bold">Alberto Somayya</h2>
-                        <h4 class="font-weight-bold">Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having
-                            worked closely with whos-who in the culinary world, he specializes in creating mouthwatering 
-                            Indo-Italian fusion experiences. 
-                        </p>
-                    </div>
-                </div>
-            </div>
+             </div>
         </div>
         <div class="row" id="reserve"></div>
             <div class="col-12 col-sm-8 offset-sm-2 mb-5">
