--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -73,6 +73,12 @@
             bottom: 10%;
             left: 30%;
         }
+        #carouselButton {
+            right:0px;
+            position: absolute;
+            bottom: 0px;
+            z-index: 1;
+        }
     </style>
 
     <title>Ristorante Con Fusion</title>
@@ -89,54 +95,107 @@
             </div>
             <div class="collapse navbar-collapse ml-2" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                        <li class="nav-item active"><a class="nav-link font-weight-bold" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                        <li class="nav-item"><a class="nav-link font-weight-bold" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+                        <li class="nav-item"><a class="nav-link font-weight-bold" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                        <li class="nav-item"><a class="nav-link font-weight-bold" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
                     <a data-toggle="modal" data-target="#loginModal">
-                    <span class="fa fa-sign-in"></span> Login</a>
+                    <span class="fa fa-sign-in"></span><strong> Login</strong></a>
                 </span>
             </div>
         </div>
     </nav>
-    <div id="loginModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
-            <!-- Modal content-->
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" style="margin: auto auto;max-width:800px;" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h5 class="modal-title h4 font-weight-bold" id="exampleModalLabel">Reserve a Table</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-row">
-                            <div class="form-group col-sm-4">
-                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
-                            </div>
-                            <div class="form-group col-sm-4">
-                                <label class="sr-only" for="exampleInputPassword3">Password</label>
-                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
-                            </div>
-                            <div class="col-sm-auto">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox">
-                                    <label class="form-check-label"> Remember me
-                                    </label>
+                <div class="modal-body pl-0 pr-0 pt-0 pb-0">
+                    <div class="card ">
+                        <div class="card-body">
+                            <form action="">
+                                <div class="row">
+                                    <div class="col-md-3 col-lg-2">
+                                        <p >Number of Guests</p>
+                                    </div>
+                                    <div class="col-md-9 col-lg-10">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                            <label class="form-check-label" for="inlineRadio1">1</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                            <label class="form-check-label" for="inlineRadio2">2</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                            <label class="form-check-label" for="inlineRadio3">3</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                            <label class="form-check-label" for="inlineRadio4">4</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                            <label class="form-check-label" for="inlineRadio5">5</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                            <label class="form-check-label" for="inlineRadio6">6</label>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="row mb-4">
+                                    <div class="col-md-3 col-lg-2">
+                                        <p >Section</p>
+                                    </div>
+                                    <div class="col-md-9 col-lg-10">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-success active">
+                                              <input type="radio" name="options" id="option1" autocomplete="off" checked><strong> Non-Smoking</strong>
+                                            </label>
+                                            <label class="btn btn-danger">
+                                              <input type="radio" name="options" id="option2" autocomplete="off"><strong> Smoking</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row mt-4 mt-md-1">
+                                    <div class="col-md-3 col-lg-2">
+                                        <p>Date and Time</p>
+                                    </div>
+                                    <div class="col-md-9 col-lg-10">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                            <input type="text" class="form-control" placeholder="Date" style="width:12rem;">
+                                            </div>
+                                            <div class="col-md-4">
+                                            <input type="text" class="form-control" placeholder="Time" style="width:12rem;">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-9 offset-md-3 col-lg-10 offset-lg-2 mt-2">
+                                        <button type="submit" class="btn btn-secondary my-1 font-weight-bold">Cancel</button>
+                                        <button type="submit" class="btn btn-primary my-1 font-weight-bold">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!--  -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -150,17 +209,17 @@
                             <img src="./img/logo.png" class="img-fluid">
                         </div>
                         <div class="col-sm-6">
-                            <a role="button" class="btn btn-block nav-link btn-warning"
-                                data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                                data-placement="bottom" href="#reserveform">Reserve Table
-                            </a>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-block nav-link btn-warning text-light" data-toggle="modal" data-target="#exampleModal">
+                                    <strong> Reserve Table</strong>
+                                </button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-
+    <!-- carousel -->
     <div class="container">
         <div class="row row-content row-content align-items-center">
             <div class="col">
@@ -212,70 +271,10 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                </div>
-             </div>
-        </div>
-        <div class="row" id="reserve"></div>
-            <div class="col-12 col-sm-8 offset-sm-2 mb-5">
-                <div class="card">
-                    <div class="card-header bg-warning text-white font-weight-bold h4">
-                        Reserve a Table
-                    </div>
-                    <div class="card-body">
-                        <form action="">
-                            <div class="row">
-                                <div class="col-md-3 col-lg-2">
-                                    <p >Number of Guests</p>
-                                </div>
-                                <div class="col-md-9 col-lg-10">
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline1">1</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline2" name="customRadioInline2" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline2">2</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline3" name="customRadioInline3" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline3">3</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline4" name="customRadioInline4" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline4">4</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline5" name="customRadioInline5" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline5">5</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline6" name="customRadioInline6" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline6">6</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mt-4 mt-md-1">
-                                <div class="col-md-3 col-lg-2">
-                                    <p>Date and Time</p>
-                                </div>
-                                <div class="col-md-9 col-lg-10">
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                          <input type="text" class="form-control" placeholder="Date" style="width:10rem;">
-                                        </div>
-                                        <div class="col-md-4">
-                                          <input type="text" class="form-control" placeholder="Time" style="width:10rem;">
-                                        </div>
-                                      </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-9 offset-md-3 col-lg-10 offset-lg-2 mt-2">
-                                    <button type="submit" class="btn btn-primary my-1">Submit</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                    <!-- trigger pause/play -->
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span id="carousel-button-icon" class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -330,8 +329,17 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
+        $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')){
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');                    
+                }
         });
     </script>
 </body>
